--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "mongoose": "^8.6.3",
     "nodemailer": "^6.9.16",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1"
   }
 }
